networking/dev/pihole/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pihole-dev
  namespace: networking
spec:
  defaultBackend:
    service:
      name: pihole
      port:
        name: https
  ingressClassName: tailscale
  tls:
    - hosts:
        - pihole-dev
